# radial-gradient

./: .gitignore  Dockerfile  README.md  Untitled.ipynb  docker-compose.yaml  pyproject.toml  simple_card.html  style.css
backend/: Dockerfile  app.py  crud.py  database.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/utils/: load_data.py
data/: README.md  load_data.py
database-api/: Dockerfile  README.md
database-api/database_api/: app.py  crud.py
rg-data/: content.csv  like_data.csv  pyproject.toml
rg-data/rg_data/: download_like_data.py  load_data.py
rg-db-api/: Dockerfile  pyproject.toml
rg-db-api/rg_db_api/: app.py  crud.py  models.py  schemas.py
rg-frontend/: package-lock.json  package.json
rg-frontend/src/: App.css  App.js  Buttons.js
rg-model/: README.md  pyproject.toml
rg-model/notebooks/: Untitled.ipynb
rg-model/rg_model/: dataset.py  model.py  train.py
ts-frontend/: package-lock.json  package.json
ts-frontend/src/: index.tsx
ts-frontend/src/components/App/: index.tsx
ts-frontend/src/services/: api-example.ts
ts-frontend/src/utils/: async.ts
