[tool.poetry]
name = "rg-data"
version = "0.1.0"
description = ""
authors = ["Evan Azevedo <evan@azevedo.com>"]
readme = "README.md"
packages = [{include = "rg_data"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
