[tool.poetry]
name = "radial-gradient-backend"
version = "0.1.0"
description = "A unique way to see inside ML inference"
authors = ["Evan Azevedo <evan@azevedo.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "database_api"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
pydantic = "^1.10.4"
sqlalchemy = "^1.4.46"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.0"
ruff = "^0.0.222"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
