[tool.poetry]
name = "rg-model"
version = "0.1.0"
description = ""
authors = ["Evan Azevedo <evan@azevedo.com>"]
license = "GNU"
readme = "README.md"
packages = [{include = "rg_model"}]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.24.1"
torch = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
